src/main/gen/com/github/zinoviy23/intellijIdris/lang/parser/psi/IdrParser.java
// This is a generated file. Not intended for manual editing.
package com.github.zinoviy23.intellijIdris.lang.parser.psi;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.zinoviy23.intellijIdris.lang.parser.psi.IdrTokenTypes.*;
import static com.github.zinoviy23.intellijIdris.lang.parser.IdrParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class IdrParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return file(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(DATA_BODY, DATA_CONSTRUCTORS_BODY, DATA_VARIANTS_BODY),
    create_token_set_(FUNCTION_CALL_PATTERN, IMPLICIT_ARGUMENT_PATTERN, PATTERN, SIMPLE_EXPRESSION_PATTERN),
    create_token_set_(CASE_EXPRESSION, CHAR_LITERAL_EXPRESSION, DEFAULT_PAREN_EXPRESSION, EMPTY_TUPLE_PAREN_EXPRESSION,
      EXPRESSION, FUNCTION_CALL_EXPRESSION, HOLE_EXPRESSION, ID_EXPRESSION,
      IF_EXPRESSION, INTEGER_LITERAL_EXPRESSION, LAMBDA_EXPRESSION, LET_EXPRESSION,
      LIST_LITERAL_EXPRESSION, NAMED_PATTERN_EXPRESSION, NAME_PAREN_EXPRESSION, OPERATOR_EXPRESSION,
      OPERATOR_PAREN_EXPRESSION, PAREN_EXPRESSION, PLACEHOLDER_EXPRESSION, SIMPLE_EXPRESSION,
      STRING_LITERAL_EXPRESSION, TUPLE_PARENT_EXPRESSION, TYPE_EXPRESSION),
  };

  /* ********************************************************** */
  // open (indented_start case_entry indented_end)* close
  static boolean case_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_body")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = open(b, l + 1);
    r = r && case_body_1(b, l + 1);
    r = r && close(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (indented_start case_entry indented_end)*
  private static boolean case_body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_body_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!case_body_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "case_body_1", c)) break;
    }
    return true;
  }

  // indented_start case_entry indented_end
  private static boolean case_body_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_body_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = indented_start(b, l + 1);
    r = r && case_entry(b, l + 1);
    r = r && indented_end(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (function_call_pattern | pattern) ARROW_SIGN expression
  public static boolean case_entry(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_entry")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CASE_ENTRY, "<case entry>");
    r = case_entry_0(b, l + 1);
    r = r && consumeToken(b, ARROW_SIGN);
    r = r && expression(b, l + 1, -1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // function_call_pattern | pattern
  private static boolean case_entry_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_entry_0")) return false;
    boolean r;
    r = function_call_pattern(b, l + 1);
    if (!r) r = pattern(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // CHAR_QUOTE CHAR_CONTENT CHAR_QUOTE
  public static boolean char_literal_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "char_literal_expression")) return false;
    if (!nextTokenIs(b, CHAR_QUOTE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CHAR_LITERAL_EXPRESSION, null);
    r = consumeTokens(b, 1, CHAR_QUOTE, CHAR_CONTENT, CHAR_QUOTE);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // <<popIndent>> <<closeBlock>>
  static boolean close(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "close")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = popIndent(b, l + 1);
    r = r && closeBlock(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expression indent? ARROW_SIGN indent?
  public static boolean constraint_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTRAINT_LIST, "<constraint list>");
    r = expression(b, l + 1, -1);
    r = r && constraint_list_1(b, l + 1);
    r = r && consumeToken(b, ARROW_SIGN);
    r = r && constraint_list_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // indent?
  private static boolean constraint_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint_list_1")) return false;
    indent(b, l + 1);
    return true;
  }

  // indent?
  private static boolean constraint_list_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint_list_3")) return false;
    indent(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // data_variants_body | data_constructors_body
  public static boolean data_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_body")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, DATA_BODY, "<data body>");
    r = data_variants_body(b, l + 1);
    if (!r) r = data_constructors_body(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // open (indented_start function_specification indented_end)* close
  static boolean data_constructors(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_constructors")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = open(b, l + 1);
    r = r && data_constructors_1(b, l + 1);
    r = r && close(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (indented_start function_specification indented_end)*
  private static boolean data_constructors_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_constructors_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!data_constructors_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "data_constructors_1", c)) break;
    }
    return true;
  }

  // indented_start function_specification indented_end
  private static boolean data_constructors_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_constructors_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = indented_start(b, l + 1);
    r = r && function_specification(b, l + 1);
    r = r && indented_end(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // COLON_SIGN type_specification KW_WHERE data_constructors
  public static boolean data_constructors_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_constructors_body")) return false;
    if (!nextTokenIs(b, COLON_SIGN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DATA_CONSTRUCTORS_BODY, null);
    r = consumeToken(b, COLON_SIGN);
    p = r; // pin = 1
    r = r && report_error_(b, type_specification(b, l + 1));
    r = p && report_error_(b, consumeToken(b, KW_WHERE)) && r;
    r = p && data_constructors(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // [function_opts_list eol*] KW_DATA IDENTIFICATOR (IDENTIFICATOR)* data_body
  public static boolean data_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_declaration")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DATA_DECLARATION, "<data declaration>");
    r = data_declaration_0(b, l + 1);
    r = r && consumeTokens(b, 1, KW_DATA, IDENTIFICATOR);
    p = r; // pin = 2
    r = r && report_error_(b, data_declaration_3(b, l + 1));
    r = p && data_body(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [function_opts_list eol*]
  private static boolean data_declaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_declaration_0")) return false;
    data_declaration_0_0(b, l + 1);
    return true;
  }

  // function_opts_list eol*
  private static boolean data_declaration_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_declaration_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = function_opts_list(b, l + 1);
    r = r && data_declaration_0_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // eol*
  private static boolean data_declaration_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_declaration_0_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!eol(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "data_declaration_0_0_1", c)) break;
    }
    return true;
  }

  // (IDENTIFICATOR)*
  private static boolean data_declaration_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_declaration_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, IDENTIFICATOR)) break;
      if (!empty_element_parsed_guard_(b, "data_declaration_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // (IDENTIFICATOR | operator_paren_expression) (simple_expression)*
  public static boolean data_declaration_variant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_declaration_variant")) return false;
    if (!nextTokenIs(b, "<data declaration variant>", IDENTIFICATOR, LPAR)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DATA_DECLARATION_VARIANT, "<data declaration variant>");
    r = data_declaration_variant_0(b, l + 1);
    r = r && data_declaration_variant_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // IDENTIFICATOR | operator_paren_expression
  private static boolean data_declaration_variant_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_declaration_variant_0")) return false;
    boolean r;
    r = consumeToken(b, IDENTIFICATOR);
    if (!r) r = operator_paren_expression(b, l + 1);
    return r;
  }

  // (simple_expression)*
  private static boolean data_declaration_variant_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_declaration_variant_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!data_declaration_variant_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "data_declaration_variant_1", c)) break;
    }
    return true;
  }

  // (simple_expression)
  private static boolean data_declaration_variant_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_declaration_variant_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = simple_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // indent? EQ_SIGN indent? data_declaration_variant (indent? OPT_SEP indent? data_declaration_variant)*
  public static boolean data_variants_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_variants_body")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DATA_VARIANTS_BODY, "<data variants body>");
    r = data_variants_body_0(b, l + 1);
    r = r && consumeToken(b, EQ_SIGN);
    p = r; // pin = 2
    r = r && report_error_(b, data_variants_body_2(b, l + 1));
    r = p && report_error_(b, data_declaration_variant(b, l + 1)) && r;
    r = p && data_variants_body_4(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // indent?
  private static boolean data_variants_body_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_variants_body_0")) return false;
    indent(b, l + 1);
    return true;
  }

  // indent?
  private static boolean data_variants_body_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_variants_body_2")) return false;
    indent(b, l + 1);
    return true;
  }

  // (indent? OPT_SEP indent? data_declaration_variant)*
  private static boolean data_variants_body_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_variants_body_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!data_variants_body_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "data_variants_body_4", c)) break;
    }
    return true;
  }

  // indent? OPT_SEP indent? data_declaration_variant
  private static boolean data_variants_body_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_variants_body_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = data_variants_body_4_0_0(b, l + 1);
    r = r && consumeToken(b, OPT_SEP);
    r = r && data_variants_body_4_0_2(b, l + 1);
    r = r && data_declaration_variant(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // indent?
  private static boolean data_variants_body_4_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_variants_body_4_0_0")) return false;
    indent(b, l + 1);
    return true;
  }

  // indent?
  private static boolean data_variants_body_4_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_variants_body_4_0_2")) return false;
    indent(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LPAR eol* expression RPAR
  public static boolean default_paren_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "default_paren_expression")) return false;
    if (!nextTokenIs(b, LPAR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAR);
    r = r && default_paren_expression_1(b, l + 1);
    r = r && expression(b, l + 1, -1);
    r = r && consumeToken(b, RPAR);
    exit_section_(b, m, DEFAULT_PAREN_EXPRESSION, r);
    return r;
  }

  // eol*
  private static boolean default_paren_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "default_paren_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!eol(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "default_paren_expression_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // DIRECTIVE_START DIRECTIVE_TYPE DIRECTIVE_CONTENT
  public static boolean directive(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive")) return false;
    if (!nextTokenIs(b, DIRECTIVE_START)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DIRECTIVE, null);
    r = consumeTokens(b, 1, DIRECTIVE_START, DIRECTIVE_TYPE, DIRECTIVE_CONTENT);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // LPAR RPAR
  public static boolean empty_tuple_paren_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "empty_tuple_paren_expression")) return false;
    if (!nextTokenIs(b, LPAR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LPAR, RPAR);
    exit_section_(b, m, EMPTY_TUPLE_PAREN_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // <<myEol>>
  static boolean eol(PsiBuilder b, int l) {
    return myEol(b, l + 1);
  }

  /* ********************************************************** */
  // ESCAPED_NAME_QUOTE ESCAPED_NAME ESCAPED_NAME_QUOTE
  public static boolean escaped_name_id(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "escaped_name_id")) return false;
    if (!nextTokenIs(b, ESCAPED_NAME_QUOTE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ESCAPED_NAME_ID, null);
    r = consumeTokens(b, 1, ESCAPED_NAME_QUOTE, ESCAPED_NAME, ESCAPED_NAME_QUOTE);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // expression (COMMA expression)+
  public static boolean expression_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_LIST, "<expression list>");
    r = expression(b, l + 1, -1);
    r = r && expression_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA expression)+
  private static boolean expression_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_list_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression_list_1_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!expression_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression_list_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA expression
  private static boolean expression_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // !(eol+ IDENTIFICATOR)
  static boolean expression_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !expression_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // eol+ IDENTIFICATOR
  private static boolean expression_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_recover_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression_recover_0_0(b, l + 1);
    r = r && consumeToken(b, IDENTIFICATOR);
    exit_section_(b, m, null, r);
    return r;
  }

  // eol+
  private static boolean expression_recover_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_recover_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = eol(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!eol(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression_recover_0_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // eol* (module_statement eol+)? top_level ((eol+ top_level) | eol+ <<eof>>)*
  static boolean file(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = file_0(b, l + 1);
    r = r && file_1(b, l + 1);
    r = r && top_level(b, l + 1);
    r = r && file_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // eol*
  private static boolean file_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!eol(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "file_0", c)) break;
    }
    return true;
  }

  // (module_statement eol+)?
  private static boolean file_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file_1")) return false;
    file_1_0(b, l + 1);
    return true;
  }

  // module_statement eol+
  private static boolean file_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = module_statement(b, l + 1);
    r = r && file_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // eol+
  private static boolean file_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = eol(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!eol(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "file_1_0_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // ((eol+ top_level) | eol+ <<eof>>)*
  private static boolean file_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!file_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "file_3", c)) break;
    }
    return true;
  }

  // (eol+ top_level) | eol+ <<eof>>
  private static boolean file_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = file_3_0_0(b, l + 1);
    if (!r) r = file_3_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // eol+ top_level
  private static boolean file_3_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file_3_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = file_3_0_0_0(b, l + 1);
    r = r && top_level(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // eol+
  private static boolean file_3_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file_3_0_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = eol(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!eol(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "file_3_0_0_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // eol+ <<eof>>
  private static boolean file_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file_3_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = file_3_0_1_0(b, l + 1);
    r = r && eof(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // eol+
  private static boolean file_3_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file_3_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = eol(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!eol(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "file_3_0_1_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // function_call_expression
  public static boolean function_call_pattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_call_pattern")) return false;
    if (!nextTokenIs(b, "<function call pattern>", IDENTIFICATOR, LPAR)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_CALL_PATTERN, "<function call pattern>");
    r = function_call_expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // id_expression | paren_expression
  static boolean function_element(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_element")) return false;
    if (!nextTokenIs(b, "", IDENTIFICATOR, LPAR)) return false;
    boolean r;
    r = id_expression(b, l + 1);
    if (!r) r = paren_expression(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // (IDENTIFICATOR | operator_paren_expression ) (pattern)* indent? match_body
  public static boolean function_match(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_match")) return false;
    if (!nextTokenIs(b, "<function match>", IDENTIFICATOR, LPAR)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_MATCH, "<function match>");
    r = function_match_0(b, l + 1);
    r = r && function_match_1(b, l + 1);
    r = r && function_match_2(b, l + 1);
    r = r && match_body(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // IDENTIFICATOR | operator_paren_expression
  private static boolean function_match_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_match_0")) return false;
    boolean r;
    r = consumeToken(b, IDENTIFICATOR);
    if (!r) r = operator_paren_expression(b, l + 1);
    return r;
  }

  // (pattern)*
  private static boolean function_match_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_match_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!function_match_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "function_match_1", c)) break;
    }
    return true;
  }

  // (pattern)
  private static boolean function_match_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_match_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = pattern(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // indent?
  private static boolean function_match_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_match_2")) return false;
    indent(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // KW_EXPORT | KW_TOTAL | KW_PARTIAL | KW_PRIVATE | KW_PUBLIC
  static boolean function_opt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_opt")) return false;
    boolean r;
    r = consumeToken(b, KW_EXPORT);
    if (!r) r = consumeToken(b, KW_TOTAL);
    if (!r) r = consumeToken(b, KW_PARTIAL);
    if (!r) r = consumeToken(b, KW_PRIVATE);
    if (!r) r = consumeToken(b, KW_PUBLIC);
    return r;
  }

  /* ********************************************************** */
  // function_opt (indent? function_opt)*
  public static boolean function_opts_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_opts_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_OPTS_LIST, "<function opts list>");
    r = function_opt(b, l + 1);
    r = r && function_opts_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
